--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
 		<mule.version>3.8.4</mule.version>
     	<mule.tools.version>1.2</mule.tools.version>
+    	<derby.version>10.13.1.1</derby.version>
 	</properties>
 
 	<build>
@@ -114,6 +115,15 @@
 			<version>${mule.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		
+		<!-- non-mule dependencies -->
+		<dependency>
+    		<groupId>org.apache.derby</groupId>
+    		<artifactId>derbyLocale_zh_CN</artifactId>
+    		<version>${derby.version}</version>
+		</dependency>
+		
 		<!-- for testing -->
 		<dependency>
 			<groupId>org.mule.tests</groupId>
@@ -121,6 +131,7 @@
 			<version>${mule.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
 	<dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-module-http</artifactId>
@@ -130,6 +141,12 @@
     <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-module-spring-config</artifactId>
+            <version>${mule.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-db</artifactId>
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
